First pass on implementing pending members